RESOLVED FIXED227708
Don't interrupt database for WebResourceLoadStatisticsStore if it will not be suspended
https://bugs.webkit.org/show_bug.cgi?id=227708
Summary Don't interrupt database for WebResourceLoadStatisticsStore if it will not be...
Sihui Liu
Reported 2021-07-06 09:06:05 PDT
...
Attachments
Patch (2.02 KB, patch)
2021-07-06 09:07 PDT, Sihui Liu
no flags
Sihui Liu
Comment 1 2021-07-06 09:07:38 PDT
Geoffrey Garen
Comment 2 2021-07-06 10:21:29 PDT
Comment on attachment 432939 [details] Patch r=me
EWS
Comment 3 2021-07-06 12:00:26 PDT
Committed r279600 (239424@main): <https://commits.webkit.org/239424@main> All reviewed patches have been landed. Closing bug and clearing flags on attachment 432939 [details].
Radar WebKit Bug Importer
Comment 4 2021-07-06 12:01:21 PDT
Note You need to log in before you can comment on or make changes to this bug.