Don't interrupt database for WebResourceLoadStatisticsStore if it will not be suspended https://bugs.webkit.org/show_bug.cgi?id=227708

Reviewed by Geoffrey Garen.

* NetworkProcess/Classifier/WebResourceLoadStatisticsStore.cpp:
(WebKit::WebResourceLoadStatisticsStore::suspend):


Canonical link: https://commits.webkit.org/239424@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@279600 268f45cc-cd09-0410-ab3c-d52691b4dbfc